--- a/index.html
+++ b/index.html
@@ -6,42 +6,172 @@
   <title>Task App</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
-    body { font-family: Arial, sans-serif; background-color: #1e293b; color: #f1f5f9; padding: 20px; }
-    .task-list, .add-task-form { max-width: 600px; margin: 0 auto; }
-    .task { background: #334155; padding: 15px; border-radius: 8px; margin-bottom: 10px; display: flex; justify-content: space-between; }
-    .task-header { display: flex; gap: 15px; align-items: center; }
-    .task-icon { width: 25px; height: 25px; }
-    .task-complete-btn { background-color: #10b981; color: white; padding: 5px; border: none; border-radius: 4px; cursor: pointer; }
-    .add-task-form input, .add-task-form select, .add-task-form button { margin-right: 5px; padding: 10px; border-radius: 4px; border: none; }
-    .add-task-form button { background-color: #3b82f6; color: white; cursor: pointer; }
+    :root {
+      --bg-dark: #1a1a1a;
+      --card-bg: rgba(255, 255, 255, 0.05);
+      --border-color: rgba(255, 255, 255, 0.1);
+      --text-primary: #ffffff;
+      --text-secondary: rgba(255, 255, 255, 0.7);
+      --accent-blue: rgba(59, 130, 246, 0.2);
+      --accent-pink: rgba(236, 72, 153, 0.2);
+      --accent-yellow: rgba(234, 179, 8, 0.2);
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: system-ui, -apple-system, sans-serif;
+    }
+
+    body {
+      min-height: 100vh;
+      background: linear-gradient(to bottom right, var(--bg-dark), #000);
+      color: var(--text-primary);
+      padding: 2rem 1rem;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+    .decorative-image {
+      width: 150px;
+      height: 150px;
+      margin: 1rem auto;
+      display: block;
+    }
+
+    .task-list, .add-task-form {
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+    .task {
+      background: var(--card-bg);
+      border: 1px solid var(--border-color);
+      border-radius: 0.75rem;
+      padding: 1.5rem;
+      backdrop-filter: blur(12px);
+      margin-bottom: 1.5rem;
+      display: flex;
+      justify-content: space-between;
+      transition: all 0.2s;
+    }
+
+    .task:hover {
+      border-color: rgba(255, 255, 255, 0.2);
+    }
+
+    .task-header {
+      display: flex;
+      gap: 15px;
+      align-items: center;
+    }
+
+    .task-icon {
+      width: 25px;
+      height: 25px;
+    }
+
+    .task-complete-btn {
+      background: linear-gradient(to right, var(--accent-blue), var(--accent-pink));
+      color: var(--text-primary);
+      padding: 0.75rem;
+      border: 1px solid var(--border-color);
+      border-radius: 0.5rem;
+      cursor: pointer;
+      transition: all 0.2s;
+    }
+
+    .task-complete-btn:hover {
+      opacity: 0.9;
+      border-color: rgba(255, 255, 255, 0.2);
+    }
+
+    .add-task-form input, .add-task-form select, .add-task-form button {
+      margin-right: 5px;
+      padding: 10px;
+      border-radius: 0.5rem;
+      border: 1px solid var(--border-color);
+      background: rgba(255, 255, 255, 0.05);
+      color: var(--text-primary);
+      transition: all 0.2s;
+    }
+
+    .add-task-form input:focus, .add-task-form select:focus {
+      outline: none;
+      border-color: rgba(59, 130, 246, 0.5);
+      box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.25);
+    }
+
+    .add-task-form button {
+      background: linear-gradient(to right, var(--accent-blue), var(--accent-pink), var(--accent-yellow));
+      color: var(--text-primary);
+      cursor: pointer;
+      border: none;
+    }
+
+    .add-task-form button:hover {
+      opacity: 0.9;
+      border-color: rgba(255, 255, 255, 0.2);
+    }
+
+    .task-list h2, .add-task-form h3 {
+      margin-bottom: 1rem;
+    }
+
+    .export-btn {
+      margin-top: 1rem;
+      padding: 10px;
+      border-radius: 0.5rem;
+      border: 1px solid var(--border-color);
+      background: linear-gradient(to right, var(--accent-blue), var(--accent-pink), var(--accent-yellow));
+      color: var(--text-primary);
+      cursor: pointer;
+      transition: all 0.2s;
+      width: 100%;
+    }
+
+    .export-btn:hover {
+      opacity: 0.9;
+      border-color: rgba(255, 255, 255, 0.2);
+    }
   </style>
 </head>
 <body>
-  <div class="task-list">
-    <h2>Task List</h2>
-    <div id="tasks"></div>
-  </div>
+  <div class="container">
+    <img src="icon1.png" alt="Decorative Spiral" class="decorative-image">
+    <div class="task-list">
+      <h2>Task List</h2>
+      <div id="tasks"></div>
+      <button class="export-btn" onclick="exportToCSV()">Export to CSV</button>
+    </div>
 
-  <div class="add-task-form">
-    <h3>Add a New Task</h3>
-    <input type="text" id="taskText" placeholder="Enter task...">
-    <select id="taskPoints">
-      <option value="1">1 pt</option>
-      <option value="2">2 pts</option>
-      <option value="3">3 pts</option>
-      <option value="4">4 pts</option>
-      <option value="5">5 pts</option>
-    </select>
-    <select id="taskCategory">
-      <option value="admin">Admin</option>
-      <option value="portfolio">Portfolio</option>
-      <option value="prep">Prep</option>
-      <option value="teaching">Teaching</option>
-      <option value="making">Making</option>
-      <option value="learning">Learning</option>
-      <option value="other">Other</option>
-    </select>
-    <button onclick="addTask()">Add Task</button>
+    <div class="add-task-form">
+      <h3>Add a New Task</h3>
+      <input type="text" id="taskText" placeholder="Enter task...">
+      <select id="taskPoints">
+        <option value="1">1 pt</option>
+        <option value="2">2 pts</option>
+        <option value="3">3 pts</option>
+        <option value="4">4 pts</option>
+        <option value="5">5 pts</option>
+      </select>
+      <select id="taskCategory">
+        <option value="admin">Admin</option>
+        <option value="portfolio">Portfolio</option>
+        <option value="prep">Prep</option>
+        <option value="teaching">Teaching</option>
+        <option value="making">Making</option>
+        <option value="learning">Learning</option>
+        <option value="other">Other</option>
+      </select>
+      <button onclick="addTask()">Add Task</button>
+    </div>
+
+    <img src="icon2.png" alt="Decorative Spiral" class="decorative-image">
   </div>
 
   <script>
@@ -58,10 +188,12 @@
             <span class="task-icon"><i class="fas fa-tasks"></i></span>
             <div>
               <div>${task.text}</div>
-              <small>Points: ${task.points}, Category: ${task.category}</small>
+              <small>Points: ${task.points}, Category: ${task.category}</small><br>
+              <small>Date Added: ${task.dateAdded}</small><br>
+              ${task.dateCompleted ? `<small>Date Completed: ${task.dateCompleted}</small>` : ''}
             </div>
           </div>
-          <button class="task-complete-btn" onclick="completeTask(${task.id})">Mark Complete</button>
+          ${!task.completed ? `<button class="task-complete-btn" onclick="completeTask(${task.id})">Mark Complete</button>` : ''}
         `;
         tasksDiv.appendChild(taskDiv);
       });
@@ -71,6 +203,7 @@
       const taskText = document.getElementById('taskText').value;
       const taskPoints = document.getElementById('taskPoints').value;
       const taskCategory = document.getElementById('taskCategory').value;
+      const dateAdded = new Date().toLocaleDateString();
 
       if (taskText.trim()) {
         const newTask = {
@@ -78,7 +211,9 @@
           text: taskText,
           points: taskPoints,
           category: taskCategory,
-          completed: false
+          dateAdded: dateAdded,
+          completed: false,
+          dateCompleted: null
         };
         tasks.push(newTask);
         renderTasks();
@@ -90,8 +225,33 @@
       const taskIndex = tasks.findIndex(task => task.id === id);
       if (taskIndex !== -1) {
         tasks[taskIndex].completed = true;
+        tasks[taskIndex].dateCompleted = new Date().toLocaleDateString();
         renderTasks();
       }
+    }
+
+    function exportToCSV() {
+      const headers = ['Task', 'Points', 'Category', 'Date Added', 'Date Completed'];
+      const csvContent = [
+        headers.join(','),
+        ...tasks.map(task => [
+          `"${task.text}"`,
+          task.points,
+          task.category,
+          task.dateAdded,
+          task.dateCompleted ? task.dateCompleted : ''
+        ].join(','))
+      ].join('\n');
+
+      const blob = new Blob([csvContent], { type: 'text/csv' });
+      const url = window.URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url;
+      a.download = `tasks-${new Date().toISOString().split('T')[0]}.csv`;
+      document.body.appendChild(a);
+      a.click();
+      document.body.removeChild(a);
+      window.URL.revokeObjectURL(url);
     }
   </script>
 </body>
